@@ -13,6 +13,7 @@
     [gtk3] Dialog label wrap min width closes BwackNinja issue #25
     Dialog send stdout of external commands to /dev/null
     socket add props edit_file and run_in_terminal
+    [gtk3] create archive dlg expand options entry
 0.8.3   2012-11-24:
     added --socket-cmd #142
     added View|Events menu
